--- a/Pr-4.Book_Store/views/admin.ejs
+++ b/Pr-4.Book_Store/views/admin.ejs
@@ -84,5 +84,11 @@
         </div>
     </div>
 
+    
+    <div class="loader-container">
+        <img src="/images/loader-img.gif" alt="" w100px>
+      </div>
+    
+    <script src="/script.js"></script>
 </body>
 </html>
