--- a/Pr-4.Book_Store/views/book.ejs
+++ b/Pr-4.Book_Store/views/book.ejs
@@ -30,5 +30,12 @@
         </div>
       </div>
     </div>
+
+    
+    <div class="loader-container">
+      <img src="/images/loader-img.gif" alt="" w100px>
+    </div>
+  
+  <script src="/script.js"></script>
   </body>
 </html>
