--- a/Pr-4.Book_Store/views/fav.ejs
+++ b/Pr-4.Book_Store/views/fav.ejs
@@ -53,5 +53,12 @@
         <% }) %>
       </div>
     </div>
+
+    
+    <div class="loader-container">
+      <img src="/images/loader-img.gif" alt="" w100px>
+    </div>
+  
+  <script src="/script.js"></script>
   </body>
 </html>
