--- a/Pr-4.Book_Store/views/admin.ejs
+++ b/Pr-4.Book_Store/views/admin.ejs
@@ -62,7 +62,7 @@
                             <th>#</th>
                             <th><img src="/images/book.png" alt="" width="20px"> Name</th>
                             <th><img src="/images/author.png" alt="" width="20px"> Author</th>
-                            <th><img src="/images/actions.png" alt="" width="20px"> Actions</th>
+                            <th><img src="/images/setting.png" alt="" width="20px"> Actions</th>
                         </tr>
                     </thead>
                     <tbody>
