--- a/Pr-4.Book_Store/views/admin.ejs
+++ b/Pr-4.Book_Store/views/admin.ejs
@@ -62,7 +62,7 @@
                             <th>#</th>
                             <th><img src="/images/book.png" alt="" width="20px" style="margin-left: 5px;"> Name</th>
                             <th><img src="/images/author.png" alt="" width="20px" style="margin-left: 5px;"> Author</th>
-                            <th><img src="/images/setting.png" alt="" width="20px" style="margin-left: 5px;"> Actions</th>
+                            <th><img src="/images/action.png" alt="" width="20px" style="margin-left: 5px;"> Actions</th>
                         </tr>
                     </thead>
                     <tbody>
