--- a/Pr-4.Book_Store/public/style.css
+++ b/Pr-4.Book_Store/public/style.css
@@ -259,3 +259,18 @@ h1, h3 {
     opacity: 0;
     visibility: hidden;
 }
+
+
+.sticky-img{
+    position: sticky;
+    top: 0%;
+    padding-top: 20px;
+}
+
+.sticky-text{
+    position: sticky;
+    top: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #000;
+}
