--- a/Pr-4.Book_Store/views/admin.ejs
+++ b/Pr-4.Book_Store/views/admin.ejs
@@ -36,7 +36,7 @@
                                 value="<%= book ? book.author : '' %>" required>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label"><img src="/images/image.png" alt="" width="20px" style="margin-left: 5px;"> Image URL</label>
+                            <label class="form-label"><img src="/images/image.png" alt="" width="20px" style="margin-left: 5px;"> Image URL <span style="font-size: 12px;">(Image should be less than 200KB and 16:9 aspect ratio)</span></label>
                             <input type="text" name="imageUrl" class="form-control bg-dark text-light" 
                                 value="<%= book ? book.imageUrl : '' %>" required>
                         </div>
