--- a/Pr-4.Book_Store/views/index.ejs
+++ b/Pr-4.Book_Store/views/index.ejs
@@ -13,7 +13,7 @@
     <%- include('header') %>
   </head>
   <body>
-    <div class="container">
+    <div class="container mb-5">
       <h1 class="text-center heading">Discover Amazing Books</h1>
       <div class="row mt-4">
         <% books.forEach(book => { %>
