--- a/Pr-5.BookMyShow/views/movie.ejs
+++ b/Pr-5.BookMyShow/views/movie.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="icon" href="https://i.ibb.co/1JsCznN7/favicon.png">
     <title><%= movie.title %> - BookMyShow Clone</title>
 </head>
 <body>
