--- a/Pr-5.BookMyShow/views/allMovies.ejs
+++ b/Pr-5.BookMyShow/views/allMovies.ejs
@@ -65,7 +65,7 @@
     <section class="recommend-movie">
         <div class="container">
             <div class="recommend-heading">
-                <h2>Movies in Surat</h2>
+                <h2>All Movies</h2>
             </div>
             <div class="recommend-card-wrapper">
                 <% if (movies.length === 0) { %>
