--- a/Pr-5.BookMyShow/views/booking.ejs
+++ b/Pr-5.BookMyShow/views/booking.ejs
@@ -23,7 +23,7 @@
             <div class="bottom-header">
                 <div>
                     <ul>
-                        <li><a href="/all-movies">Movies</a></li>
+                        <li style="padding-left: 0px;"><a href="/all-movies">Movies</a></li>
                         <li><a href="/bookings" class="nav-active">Your Bookings</a></li>
                         <li><a href="/coming-soon">Events</a></li>
                         <li><a href="/coming-soon">Plays</a></li>
