--- a/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/addBlog.ejs
+++ b/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/addBlog.ejs
@@ -4,7 +4,7 @@
     <div class="page-breadcrumb">
         <div class="row">
             <div class="col-12 d-flex no-block align-items-center">
-                <h4 class="page-title">Add Blog</h4>
+                <h2 class="page-title text-center">Add Blog</h2>
                 <div class="ml-auto text-right">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
@@ -19,67 +19,56 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8 mx-auto">
-                <div class="card">
-                    <form class="form-horizontal" action="/blogs/add-blog" method="POST" enctype="multipart/form-data">
-                        <div class="card-body">
-                            <h4 class="card-title">Blog Details</h4>
+            <div class="col-md-10 col-lg-8 ">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Create a New Blog</h4>
 
-                            <div class="form-group row">
-                                <label class="col-sm-3 text-right control-label col-form-label">Title</label>
-                                <div class="col-sm-9">
-                                    <input type="text" class="form-control" name="title" placeholder="Enter Blog Title" required>
+                        <form action="/blogs/add-blog" method="POST" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label>Title</label>
+                                <input type="text" class="form-control" name="title" placeholder="Enter Blog Title" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Description</label>
+                                <textarea class="form-control" name="description" rows="4" placeholder="Enter Blog Description" required></textarea>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Author</label>
+                                <input type="text" class="form-control" name="author" placeholder="Enter Author Name" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Category</label>
+                                <select class="form-control" name="category" required>
+                                    <option value="">Select Category</option>
+                                    <option value="Technology">Technology</option>
+                                    <option value="Health">Health</option>
+                                    <option value="Education">Education</option>
+                                    <option value="Business">Business</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Upload Image</label>
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" name="image" required>
+                                    <label class="custom-file-label">Choose file...</label>
                                 </div>
                             </div>
 
-                            <div class="form-group row">
-                                <label class="col-sm-3 text-right control-label col-form-label">Description</label>
-                                <div class="col-sm-9">
-                                    <textarea class="form-control" name="description" rows="4" placeholder="Enter Blog Description" required></textarea>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-sm-3 text-right control-label col-form-label">Author</label>
-                                <div class="col-sm-9">
-                                    <input type="text" class="form-control" name="author" placeholder="Enter Author Name" required>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-sm-3 text-right control-label col-form-label">Category</label>
-                                <div class="col-sm-9">
-                                    <select class="form-control" name="category" required>
-                                        <option value="">Select Category</option>
-                                        <option value="Technology">Technology</option>
-                                        <option value="Health">Health</option>
-                                        <option value="Education">Education</option>
-                                        <option value="Business">Business</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label class="col-sm-3 text-right control-label col-form-label">Upload Image</label>
-                                <div class="col-sm-9">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" name="image" required>
-                                        <label class="custom-file-label">Choose file...</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="border-top">
-                            <div class="card-body text-center">
+                            <div class="text-center mt-4">
                                 <button type="submit" class="btn btn-success">Add Blog</button>
+                                <a href="/blogs/view-blogs" class="btn btn-secondary">Cancel</a>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<%- include('../Layout/footer') %>
+<%- include('../Layout/footer'); %>
