--- a/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/editBlog.ejs
+++ b/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/editBlog.ejs
@@ -2,44 +2,58 @@
 
 <div class="page-wrapper">
     <div class="container-fluid">
-        <h2 class="mb-4">Edit Blog</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title text-center mb-4">Edit Blog</h3>
 
-        <div class="card">
-            <div class="card-body">
-                <form action="/blogs/edit-blog/<%= blog._id %>" method="POST" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label>Title</label>
-                        <input type="text" class="form-control" name="title" value="<%= blog.title %>" required>
+                        <form action="/blogs/edit-blog/<%= blog._id %>" method="POST" enctype="multipart/form-data">
+                            
+                            <div class="form-group">
+                                <label>Title</label>
+                                <input type="text" class="form-control" name="title" value="<%= blog.title %>" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Description</label>
+                                <textarea class="form-control" name="description" rows="4" required><%= blog.description %></textarea>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Author</label>
+                                <input type="text" class="form-control" name="author" value="<%= blog.author %>" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Category</label>
+                                <select class="form-control" name="category" required>
+                                    <option value="Technology" <%= blog.category === 'Technology' ? 'selected' : '' %>>Technology</option>
+                                    <option value="Health" <%= blog.category === 'Health' ? 'selected' : '' %>>Health</option>
+                                    <option value="Education" <%= blog.category === 'Education' ? 'selected' : '' %>>Education</option>
+                                    <option value="Business" <%= blog.category === 'Business' ? 'selected' : '' %>>Business</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Current Image</label>
+                                <br>
+                                <img src="<%= blog.image %>" class="img-thumbnail" width="120" height="80">
+                            </div>
+
+                            <div class="form-group">
+                                <label>Upload New Image</label>
+                                <input type="file" class="form-control" name="image">
+                            </div>
+
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-success px-4">Update Blog</button>
+                                <a href="/blogs/view-blogs" class="btn btn-secondary ml-2">Cancel</a>
+                            </div>
+
+                        </form>
                     </div>
-
-                    <div class="form-group">
-                        <label>Description</label>
-                        <textarea class="form-control" name="description" required><%= blog.description %></textarea>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Author</label>
-                        <input type="text" class="form-control" name="author" value="<%= blog.author %>" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Category</label>
-                        <input type="text" class="form-control" name="category" value="<%= blog.category %>" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Current Image</label>
-                        <br>
-                        <img src="<%= blog.image %>" width="150" height="100">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Upload New Image</label>
-                        <input type="file" class="form-control" name="image">
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Update Blog</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
