--- a/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/viewBlogs.ejs
+++ b/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/viewBlogs.ejs
@@ -2,20 +2,44 @@
 
 <div class="page-wrapper">
     <div class="container-fluid">
+        <h2 class="mb-4 text-center">View Blogs</h2>
+
+        <div class="d-flex justify-content-center mb-4">
+            <form action="/blogs/view-blogs" method="GET" class="input-group w-50">
+                <input type="text" name="search" class="form-control" placeholder="Search blogs..." value="<%= searchQuery || '' %>">
+                <button type="submit" class="btn btn-dark">Search</button>
+            </form>
+        </div>
+
+        <div class="text-center mb-4">
+            <a href="/blogs/view-blogs" class="btn btn-outline-secondary mx-1">All</a>
+            <a href="/blogs/view-blogs?category=Technology" class="btn btn-outline-primary mx-1">Technology</a>
+            <a href="/blogs/view-blogs?category=Health" class="btn btn-outline-success mx-1">Health</a>
+            <a href="/blogs/view-blogs?category=Education" class="btn btn-outline-info mx-1">Education</a>
+            <a href="/blogs/view-blogs?category=Business" class="btn btn-outline-warning mx-1">Business</a>
+        </div>
+
         <div class="row">
-            <% blogs.forEach(blog => { %>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="<%= blog.image %>" alt="Blog Image" style="height: 200px; object-fit: cover;">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= blog.title %></h5>
-                            <p class="card-text">Author: <%= blog.author %></p>
-                            <p class="card-text"><small class="text-muted">Created on: <%= new Date(blog.createdAt).toDateString() %></small></p>
-                            <a href="/blogs/<%= blog._id %>" class="btn btn-primary">View Details</a>
+            <% if (blogs.length === 0) { %>
+                <div class="col-12 text-center">
+                    <h4 class="text-muted">No blogs found.</h4>
+                </div>
+            <% } else { %>
+                <% blogs.forEach(blog => { %>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card shadow-sm border-0">
+                            <img class="card-img-top" src="<%= blog.image %>" alt="Blog Image" style="height: 220px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title"><%= blog.title %></h5>
+                                <p class="text-muted">Category: <strong><%= blog.category %></strong></p>
+                                <p class="small">Author: <%= blog.author %></p>
+                                <p class="small text-muted">Created on: <%= new Date(blog.createdAt).toDateString() %></p>
+                                <a href="/blogs/<%= blog._id %>" class="btn btn-primary w-100">Read More</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            <% }); %>
+                <% }); %>
+            <% } %>
         </div>
     </div>
 </div>
