--- a/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/allBlogs.ejs
+++ b/Pr-6.Blog_Auth_AdminPanel/views/BlogPages/allBlogs.ejs
@@ -2,42 +2,61 @@
 
 <div class="page-wrapper">
     <div class="container-fluid">
-        <h2 class="mb-4">Manage Blogs</h2>
+        <!-- Page Title -->
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex align-items-center justify-content-between mb-3">
+                    <h4 class="page-title">Manage Blogs</h4>
+                    <a href="/blogs/add-blog" class="btn btn-success btn-sm"><i class="fa fa-plus"></i> Add Blog</a>
+                </div>
+            </div>
+        </div>
 
+        <!-- Blog Table -->
         <div class="card">
+            <div class="card-header bg-dark text-white">
+                <h5 class="mb-0">Blog List</h5>
+            </div>
             <div class="card-body">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Image</th>
-                            <th>Title</th>
-                            <th>Author</th>
-                            <th>Category</th>
-                            <th>Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% blogs.forEach((blog, index) => { %>
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover text-center">
+                        <thead class="thead-dark">
                             <tr>
-                                <td><%= index + 1 %></td>
-                                <td>
-                                    <img src="<%= blog.image.startsWith('/uploads/') ? blog.image : '/uploads/' + blog.image %>" 
-                                         width="80" height="50" alt="Blog Image">
-                                </td>
-                                <td><%= blog.title %></td>
-                                <td><%= blog.author %></td>
-                                <td><%= blog.category %></td>
-                                <td><%= blog.createdAt ? new Date(blog.createdAt).toDateString() : 'N/A' %></td>
-                                <td>
-                                    <a href="/blogs/edit-blog/<%= blog._id %>" class="btn btn-warning btn-sm">Edit</a>
-                                    <a href="/blogs/delete-blog/<%= blog._id %>" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this blog?')">Delete</a>
-                                </td>                                
+                                <th>#</th>
+                                <th>Image</th>
+                                <th>Title</th>
+                                <th>Author</th>
+                                <th>Category</th>
+                                <th>Created At</th>
+                                <th>Actions</th>
                             </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            <% blogs.forEach((blog, index) => { %>
+                                <tr>
+                                    <td><%= index + 1 %></td>
+                                    <td>
+                                        <img src="<%= blog.image.startsWith('/uploads/') ? blog.image : '/uploads/' + blog.image %>" 
+                                             width="60" height="40" class="rounded" alt="Blog Image">
+                                    </td>
+                                    <td><%= blog.title %></td>
+                                    <td><%= blog.author %></td>
+                                    <td><%= blog.category %></td>
+                                    <td><%= blog.createdAt ? new Date(blog.createdAt).toDateString() : 'N/A' %></td>
+                                    <td>
+                                        <a href="/blogs/edit-blog/<%= blog._id %>" class="btn btn-warning btn-sm">
+                                            <i class="fa fa-edit"></i>
+                                        </a>
+                                        <a href="/blogs/delete-blog/<%= blog._id %>" class="btn btn-danger btn-sm" 
+                                           onclick="return confirm('Are you sure you want to delete this blog?')">
+                                            <i class="fa fa-trash"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
